--- a/styles/style.css
+++ b/styles/style.css
@@ -1,8 +1,18 @@
+body {
+  background-color: SlateGrey;
+}
 h1 {
     color: #ffffff;
     text-align: center;
+    font-size: 24px;
+}
+h2 {
+    color: #ffffff;
+    text-align: left;
+    font-size: 14px;
 }
 p {
-  color: #ffffff
-  font-family: courier;
+    color: #ffffff
+    text-align: center;
+    font-size: 12px;
 }
