--- a/styles/style.css
+++ b/styles/style.css
@@ -16,3 +16,15 @@ p {
     text-align: center;
     font-size: 12px;
 }
+th {
+    color: #ffffff;
+    text-align: center;
+    vertical-align: top;
+    font-size: 16px;
+}
+td {
+    color: #000000;
+    text-align: center;
+    vertical-align: top;
+    font-size: 12px;
+}
