--- a/styles/style.css
+++ b/styles/style.css
@@ -12,7 +12,7 @@ h2 {
     font-size: 14px;
 }
 p {
-    color: #ffffff
+    color: #ffffff;
     text-align: center;
     font-size: 12px;
 }
@@ -27,4 +27,8 @@ td {
     text-align: center;
     vertical-align: top;
     font-size: 12px;
+}
+.center {
+  margin-left: auto;
+  margin-right: auto;
 }
